# batch_img

./: .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  do_release.sh  pyproject.toml  pyproject_prod.toml  pyproject_release.toml
.github/workflows/: pylint.yml  pytest.yml  win.yml  windows.yml
batch_img/: auto.py  border.py  common.py  config.json  const.py  effect.py  interface.py  log.py  main.py  no_gps.py  orientation.py  resize.py  rotate.py  transparent.py
tests/: cmd.txt  conftest.py  helper.py  test_auto.py  test_border.py  test_common.py  test_defaults.py  test_do_effect.py  test_interface.py  test_log.py  test_main.py  test_no_gps.py  test_orientation.py  test_remove_bg.py  test_resize.py  test_rotate.py  test_transparent.py
tests/data/HEIC/: Cartoon_180cw.heic  Cartoon_270cw.heic  Cartoon_90cw.heic  IMG_0131.HEIC  IMG_2527.HEIC  IMG_2527_180cw.HEIC  IMG_2527_270cw.HEIC  IMG_2527_90cw.HEIC  IMG_2529.HEIC  IMG_2529_180cw.HEIC  IMG_2529_270cw.HEIC  IMG_2529_90cw.HEIC  IMG_2530.HEIC  IMG_2530_180cw.HEIC  IMG_2530_270cw.HEIC  IMG_2530_90cw.HEIC  chef2_180cw.heic  chef2_270cw.heic  chef2_90cw.heic  chef_180cw.heic  chef_270cw.heic  chef_90cw.heic  chef_orientation_3.heic  chef_orientation_8.heic  chef_show1.heic  chef_show2.heic
tests/data/mixed/: IMG_0023.heic  IMG_0070.HEIC  Playground.heic
