[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80.0"]

[project]
name = "batch_img"
version = "0.3.7"
description = "Batch process (resize, rotate, remove background, remove GPS, add border, set transparency, auto do all) image files (HEIC, JPG, PNG)"
readme = "README.md"
authors = [{ name = "John Liu", email = "rim2rim@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["cli-tool", "image-processing", "batch-processing", "special-effect", "remove-background", "remove-gps", "resize-image", "rotate-image"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]
requires-python = ">=3.12"
dependencies = [
    "click",
    "httpx",
    "loguru",
    "numpy",
    "onnxruntime",
    "opencv-python",
    "packaging",
    "piexif",
    "pillow",
    "pillow-heif",
    "rembg", # `remove background` depends on onnxruntime
    "tqdm",
]
[project.scripts]
batch_img = "batch_img.interface:cli"

[project.urls]
Download = "https://pypi.org/project/batch-img/"
Homepage = "https://github.com/john-liu2/batch_img"

[tool.setuptools.packages.find]
include = ["*"]

[project.optional-dependencies]
dev = [
    "build", # for python -m build
    "pytest-cov", # also install pytest
    "black>=25.1.0",
    "ruff",
    "pre-commit", # rules are in .pre-commit-config.yaml
    "pylint",
]

[tool.ruff]
line-length = 88
lint.select = [
    "B", # bugbear
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
    "PD", # pandas-vet
    "RET", # flake8-return (includes no-else-return)
    "PL", # pylint
    "C416", # Unnecessary comprehension (R1721 from Pylint)
]
lint.ignore = [
    "RET504",
    "PLR2004", # Magic value used in comparison, consider replacing `3` with a constant variable
]
lint.fixable = ["E", "F", "I", "UP"]
preview = true
exclude = [
    "**/venv/",
    "**/__pycache__/",
    "**/migrations/",
    "**/tests/",
    "**/build/",
    "**/generated/**/*.py",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
[run]
parallel = true
